# ESP32_OTA

./: README.md  sdkconfig  sdkconfig.old
components/input/: CMakeLists.txt  input.h
main/: CMakeLists.txt  check_firmware_updates_task.c  component.mk  header.h  main.c  ota_update.c
